mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-backend-deployment
  namespace: assignment
spec:
  selector:
    matchLabels:
      app: spring-backend
      project: assignment
  template:
    metadata:
      labels:
        app: spring-backend
        project: assignment
    spec:
      containers:
        - name: spring-backend
          image: nylonmusk/spring-project-2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "300m"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "2Gi"
