mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-backend-service
  namespace: assignment
  labels:
    service: spring-backend
    project: assignment
spec:
  type: NodePort
  selector:
    app: spring-backend
    project: assignment
  ports:
    - port: 80
      targetPort: 8080
