mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: assignment
  labels:
    service: database
    project: assignment
spec:
  type: ClusterIP
  selector:
    service: database
    project: assignment
  ports:
    - port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: assignment
spec:
  selector:
    matchLabels:
      service: database
      project: assignment
  template:
    metadata:
      labels:
        service: database
        project: assignment
    spec:
      containers:
        - name: database
          image: mysql:5.7
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "500Mi"
              cpu: "100m"
